--- a/src/pages/about/about.html
+++ b/src/pages/about/about.html
@@ -7,5 +7,22 @@
 </ion-header>
 
 <ion-content padding>
-
+<ion-grid>
+  <ion-row>
+    <ion-col>
+<ion-item>
+  <strong>App Name: </strong>
+  <strong>iWeather</strong>
+</ion-item>
+<ion-item>
+    <strong>Version: </strong>
+    <strong>1.0.0</strong>
+  </ion-item>
+  <ion-item>
+      <strong>Description:</strong>
+      <strong>Simple Weather App</strong>
+    </ion-item>
+    </ion-col>
+    </ion-row>
+</ion-grid>
 </ion-content>
